# ai-research-agent

./: .gitignore  .pnp.cjs  CHANGELOG.md  CNAME  Globe_Animation_Smoothed.webm  LICENSE.md  README.md  README2.md  compose.yml  index.js  index.ts  jsdoc.json  package-lock.json  package.json  pnpm-lock.yaml  readme.md  reproduce_issue.js  todo.md  tsconfig.json  turbo.json  typedoc.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: migrated.json
apps/desktop/src-tauri/src/: main.rs
apps/qwksearch-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/qwksearch-desktop/src-tauri/src/: hotkeys.rs  main.rs  selection.rs  setup.rs
data/: compressed-model-jz64.js  dict-to-wiki-topics-35k.json  dictionary-index-152k.json  en-dict-index.json  human-names-92k.json  misspelled-typos-8k.json  output.json  quora-queries-15k.json  specific-domain-extractors.js  wiki-pages-100k.json  wiki-pages-200k.json  wiki-phrases-model-240k.7z  wiki-summaries.js  wiki-summary_1.js  wiki-world-model.7z  words-phrases-tree.json
demo/: package.json  readme.md  svelte.config.js  tsconfig.json  wrangler.toml
desktop/: .gitignore  package.json
docs/: api-routes.yaml  autocomplete_autocomplete.js.html  customMdGenerators.ts  dataset-import_compile-topic-model.js.html  dataset-import_compress-json-jz64.js.html  dataset-import_dictionary-import.js.html  dataset-import_human-names-import.js.html  dataset-import_misspelled-typos-import.js.html  dataset-import_quora-import.js.html  dataset-import_term-frequency-import.js.html  docusaurus.config.ts  global.html  (+58 more)
(+12314 files in other folders)
