[package]
name = "qwksearch"
version = "0.3.0"
description = "QwkSearch Desktop"
authors = ["qwksearch"]
license = "AGPL-3.0"
repository = ""

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.2.1"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2.3"
tauri-plugin-autostart = "2.5"
open = "5.3.0"
urlencoding = "2.1.3"
simulate_key = "0.1.1"


